fix(pk-portfolio): modified ~/components/Hero, corrected mobile vertical spacing issue(s) to allow more headroom to h1 element & reduce gap from <p> tag.

--- a/apps/pk-portfolio/src/scss/components/_hero.scss
+++ b/apps/pk-portfolio/src/scss/components/_hero.scss
@@ -16,9 +16,13 @@
     h1 {
       margin-top: 0;
       font-size: 32px;
+      @media (width <= variables.$breakpoint-small) { margin: 1.2rem 0 0 0; }
     }
 
-    & > p { line-height: 1.5rem; }
+    & > p {
+      line-height: 1.5rem;
+      @media (width <= variables.$breakpoint-small) { margin: 0.4rem 0 0 0; }
+    }
 
     & > div {
       display: flex;
